--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ APP_SECRET=179213ef39962a2f4f39ff44d58bd8bc
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+ DATABASE_URL="mysql://root:@127.0.0.1:3306/e_commerce"
+#DATABASE_URL="postgresql://root@127.0.0.1:5432/ecommerce_symf?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
